@@ -1,3 +1,9 @@
+
+2008-06-24  Lynn Garren
+
+        * fio/IO_HEPEVT.cc: bug fix for inconsistency in HWHGUP
+        see https://savannah.cern.ch/bugs/?38173 for details
+
   --------------------------  HepMC-2.04.00  --------------------------
 
 2008-06-04  Lynn Garren
